# mergepdf

./: .gitignore  README.md  README.rst  pyproject.toml
src/mergepdf/: __init__.py
src/sample/: sample1.md  sample2.md
