[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`mergepdf` is a package for merge PDF files."
homepage = "https://github.com/SaitoTsutomu/mergepdf"
license = "Apache-2.0"
name = "mergepdf"
readme = "README.rst"
version = "0.1.0"

[tool.poetry.scripts]
mergepdf = "mergepdf:main"

[tool.poetry.dependencies]
pypdf2 = "^3.0"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9"
flake8 = "^6.1"
isort = "^5.12"
mypy = "^1.5"
pytest = "^7.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
