[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`mergepdf` is a package for merge PDF files."
homepage = "https://github.com/SaitoTsutomu/mergepdf"
license = "Apache-2.0"
name = "mergepdf"
readme = "README.rst"
version = "0.2.0"

[tool.poetry.scripts]
mergepdf = "mergepdf:main"

[tool.poetry.dependencies]
pypdf = "^4.3"
pypdf2 = "2.1.1"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11"
pytest = "^8.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
